--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "angular-hispano",
-  "version": "0.2.2",
+  "version": "0.2.3",
   "scripts": {
     "e2e": "ng e2e",
     "ng": "ng",
@@ -18,54 +18,54 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~8.1.0-next.1",
-    "@angular/cdk": "~8.0.0",
-    "@angular/common": "~8.1.0-next.1",
-    "@angular/compiler": "~8.1.0-next.1",
-    "@angular/core": "~8.1.0-next.1",
+    "@angular/animations": "~8.1.2",
+    "@angular/cdk": "~8.1.1",
+    "@angular/common": "~8.1.2",
+    "@angular/compiler": "~8.1.2",
+    "@angular/core": "~8.1.2",
     "@angular/fire": "5.2.1",
-    "@angular/forms": "~8.1.0-next.1",
-    "@angular/material": "^8.0.0",
-    "@angular/platform-browser": "~8.1.0-next.1",
-    "@angular/platform-browser-dynamic": "~8.1.0-next.1",
-    "@angular/router": "~8.1.0-next.1",
+    "@angular/forms": "~8.1.2",
+    "@angular/material": "^8.1.1",
+    "@angular/platform-browser": "~8.1.2",
+    "@angular/platform-browser-dynamic": "~8.1.2",
+    "@angular/router": "~8.1.2",
     "angulartics2": "^7.5.2",
     "core-js": "^2.5.4",
-    "firebase": "^6.1.1",
+    "firebase": "^6.3.1",
     "hammerjs": "^2.0.8",
     "rxjs": "~6.5.2",
-    "tslib": "^1.9.0",
+    "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/architect": "^0.800.2",
-    "@angular-devkit/build-angular": "~0.800.2",
-    "@angular-devkit/core": "^8.0.2",
-    "@angular-devkit/schematics": "^8.0.2",
-    "@angular/cli": "~8.0.2",
-    "@angular/compiler-cli": "~8.1.0-next.1",
-    "@angular/language-service": "~8.1.0-next.1",
-    "@types/jasmine": "^3.3.13",
+    "@angular-devkit/architect": "^0.801.2",
+    "@angular-devkit/build-angular": "~0.801.2",
+    "@angular-devkit/core": "^8.1.2",
+    "@angular-devkit/schematics": "^8.1.2",
+    "@angular/cli": "~8.1.2",
+    "@angular/compiler-cli": "~8.1.2",
+    "@angular/language-service": "~8.1.2",
+    "@types/jasmine": "^3.3.14",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.0.7",
-    "autoprefixer": "^6.7.6",
+    "@types/node": "^12.6.8",
     "clang-format": "^1.2.4",
     "codelyzer": "^5.1.0",
-    "firebase-tools": "^6.11.0",
+    "firebase-tools": "^7.1.1",
     "jasmine-core": "^3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.1.0",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
+    "karma": "^4.2.0",
+    "karma-chrome-launcher": "^3.0.0",
+    "karma-coverage-istanbul-reporter": "^2.0.6",
+    "karma-firefox-launcher": "^1.1.0",
     "karma-jasmine": "2.0.1",
     "karma-jasmine-html-reporter": "^1.4.2",
     "minimatch": "^3.0.4",
     "npm-check": "5.9.0",
     "protractor": "6.0.0",
-    "source-map-explorer": "^2.0.0",
+    "source-map-explorer": "^2.0.1",
     "stylelint": "^10.1.0",
-    "ts-node": "^8.2.0",
-    "tslint": "^5.17.0",
+    "ts-node": "^8.3.0",
+    "tslint": "^5.18.0",
     "typescript": "~3.4.5"
   }
 }
