--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "clang-format": "^1.2.4",
     "codelyzer": "^5.1.2",
     "firebase-tools": "^7.5.0",
+    "husky": "^3.0.9",
     "jasmine-core": "^3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "^4.3.0",
@@ -69,5 +70,10 @@
     "ts-node": "^8.4.1",
     "tslint": "^5.20.0",
     "typescript": "~3.5.3"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run format"
+    }
   }
 }
