--- a/package.json
+++ b/package.json
@@ -21,17 +21,17 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~9.0.0-next.9",
-    "@angular/cdk": "~9.0.0-next.0",
-    "@angular/common": "~9.0.0-next.9",
-    "@angular/compiler": "~9.0.0-next.9",
-    "@angular/core": "~9.0.0-next.9",
+    "@angular/animations": "~9.0.0-rc.1",
+    "@angular/cdk": "~9.0.0-rc.0",
+    "@angular/common": "~9.0.0-rc.1",
+    "@angular/compiler": "~9.0.0-rc.1",
+    "@angular/core": "~9.0.0-rc.1",
     "@angular/fire": "5.2.1",
-    "@angular/forms": "~9.0.0-next.9",
-    "@angular/material": "^9.0.0-next.0",
-    "@angular/platform-browser": "~9.0.0-next.9",
-    "@angular/platform-browser-dynamic": "~9.0.0-next.9",
-    "@angular/router": "~9.0.0-next.9",
+    "@angular/forms": "~9.0.0-rc.1",
+    "@angular/material": "^9.0.0-rc.0",
+    "@angular/platform-browser": "~9.0.0-rc.1",
+    "@angular/platform-browser-dynamic": "~9.0.0-rc.1",
+    "@angular/router": "~9.0.0-rc.1",
     "@angular/service-worker": "~9.0.0-next.9",
     "angulartics2": "^8.1.0",
     "core-js": "^2.6.9",
@@ -43,12 +43,12 @@
   },
   "devDependencies": {
     "@angular-devkit/architect": "^0.900.0-next.8",
-    "@angular-devkit/build-angular": "~0.900.0-next.8",
+    "@angular-devkit/build-angular": "~0.900.0-rc.1",
     "@angular-devkit/core": "^9.0.0-next.8",
     "@angular-devkit/schematics": "^9.0.0-next.8",
-    "@angular/cli": "~9.0.0-next.8",
-    "@angular/compiler-cli": "~9.0.0-next.9",
-    "@angular/language-service": "~9.0.0-next.9",
+    "@angular/cli": "~9.0.0-rc.1",
+    "@angular/compiler-cli": "~9.0.0-rc.1",
+    "@angular/language-service": "~9.0.0-rc.1",
     "@schuchard/prettier": "^3.1.0",
     "@types/jasmine": "^3.4.2",
     "@types/jasminewd2": "^2.0.8",
@@ -74,7 +74,7 @@
     "ts-node": "^8.4.1",
     "tslint": "^5.20.0",
     "tslint-config-prettier": "1.18.0",
-    "typescript": "~3.5.3"
+    "typescript": "~3.6.4"
   },
   "husky": {
     "hooks": {
