--- a/package.json
+++ b/package.json
@@ -32,33 +32,33 @@
     "@angular/platform-browser": "~9.0.0-rc.1",
     "@angular/platform-browser-dynamic": "~9.0.0-rc.1",
     "@angular/router": "~9.0.0-rc.1",
-    "@angular/service-worker": "~9.0.0-next.9",
+    "@angular/service-worker": "~9.0.0-rc.1",
     "angulartics2": "^8.1.0",
-    "core-js": "^2.6.9",
-    "firebase": "^6.4.2",
+    "core-js": "^2.6.10",
+    "firebase": "^6.6.2",
     "hammerjs": "^2.0.8",
     "rxjs": "~6.5.3",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/architect": "^0.900.0-next.8",
+    "@angular-devkit/architect": "^0.900.0-rc.1",
     "@angular-devkit/build-angular": "~0.900.0-rc.1",
-    "@angular-devkit/core": "^9.0.0-next.8",
-    "@angular-devkit/schematics": "^9.0.0-next.8",
+    "@angular-devkit/core": "^9.0.0-rc.1",
+    "@angular-devkit/schematics": "^9.0.0-rc.1",
     "@angular/cli": "~9.0.0-rc.1",
     "@angular/compiler-cli": "~9.0.0-rc.1",
     "@angular/language-service": "~9.0.0-rc.1",
     "@schuchard/prettier": "^3.1.0",
-    "@types/jasmine": "^3.4.2",
+    "@types/jasmine": "^3.4.6",
     "@types/jasminewd2": "^2.0.8",
-    "@types/node": "^12.7.11",
-    "codelyzer": "^5.1.2",
-    "firebase-tools": "^7.5.0",
-    "husky": "3.0.9",
+    "@types/node": "^12.12.7",
+    "codelyzer": "^5.2.0",
+    "firebase-tools": "^7.7.0",
+    "husky": "^3.0.9",
     "jasmine-core": "^3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^4.3.0",
+    "karma": "^4.4.1",
     "karma-chrome-launcher": "^3.1.0",
     "karma-coverage-istanbul-reporter": "^2.1.0",
     "karma-firefox-launcher": "^1.2.0",
@@ -70,9 +70,9 @@
     "prettier": "1.19.1",
     "protractor": "^6.0.0",
     "source-map-explorer": "^2.1.0",
-    "stylelint": "^11.0.0",
+    "stylelint": "^11.1.1",
     "ts-node": "^8.4.1",
-    "tslint": "^5.20.0",
+    "tslint": "^5.20.1",
     "tslint-config-prettier": "1.18.0",
     "typescript": "~3.6.4"
   },
