--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "angular-hispano",
-  "version": "0.3.0",
+  "version": "0.3.1",
   "scripts": {
     "e2e": "ng e2e",
     "ng": "ng",
@@ -21,20 +21,20 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~9.0.0-rc.1",
-    "@angular/cdk": "~9.0.0-rc.0",
-    "@angular/common": "~9.0.0-rc.1",
-    "@angular/compiler": "~9.0.0-rc.1",
-    "@angular/core": "~9.0.0-rc.1",
-    "@angular/fire": "5.2.1",
-    "@angular/forms": "~9.0.0-rc.1",
-    "@angular/material": "^9.0.0-rc.0",
-    "@angular/platform-browser": "~9.0.0-rc.1",
-    "@angular/platform-browser-dynamic": "~9.0.0-rc.1",
-    "@angular/router": "~9.0.0-rc.1",
-    "@angular/service-worker": "~9.0.0-rc.1",
-    "angulartics2": "^8.1.0",
-    "core-js": "^2.6.10",
+    "@angular/animations": "~9.0.0-rc.5",
+    "@angular/cdk": "~9.0.0-rc.5",
+    "@angular/common": "~9.0.0-rc.5",
+    "@angular/compiler": "~9.0.0-rc.5",
+    "@angular/core": "~9.0.0-rc.5",
+    "@angular/fire": "^5.2.3",
+    "@angular/forms": "~9.0.0-rc.5",
+    "@angular/material": "^9.0.0-rc.5",
+    "@angular/platform-browser": "~9.0.0-rc.5",
+    "@angular/platform-browser-dynamic": "~9.0.0-rc.5",
+    "@angular/router": "~9.0.0-rc.5",
+    "@angular/service-worker": "~9.0.0-rc.5",
+    "angulartics2": "^8.2.0",
+    "core-js": "^2.6.11",
     "firebase": "^6.6.2",
     "hammerjs": "^2.0.8",
     "rxjs": "~6.5.3",
@@ -42,25 +42,25 @@
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/architect": "^0.900.0-rc.1",
-    "@angular-devkit/build-angular": "~0.900.0-rc.1",
-    "@angular-devkit/core": "^9.0.0-rc.1",
-    "@angular-devkit/schematics": "^9.0.0-rc.1",
-    "@angular/cli": "~9.0.0-rc.1",
-    "@angular/compiler-cli": "~9.0.0-rc.1",
-    "@angular/language-service": "~9.0.0-rc.1",
+    "@angular-devkit/architect": "^0.900.0-rc.5",
+    "@angular-devkit/build-angular": "~0.900.0-rc.5",
+    "@angular-devkit/core": "^9.0.0-rc.5",
+    "@angular-devkit/schematics": "^9.0.0-rc.5",
+    "@angular/cli": "~9.0.0-rc.5",
+    "@angular/compiler-cli": "~9.0.0-rc.5",
+    "@angular/language-service": "~9.0.0-rc.5",
     "@schuchard/prettier": "^3.1.0",
-    "@types/jasmine": "^3.4.6",
+    "@types/jasmine": "^3.5.0",
     "@types/jasminewd2": "^2.0.8",
-    "@types/node": "^12.12.7",
+    "@types/node": "^12.12.17",
     "codelyzer": "^5.2.0",
-    "firebase-tools": "^7.7.0",
-    "husky": "^3.0.9",
+    "firebase-tools": "^7.9.0",
+    "husky": "^3.1.0",
     "jasmine-core": "^3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "^4.4.1",
     "karma-chrome-launcher": "^3.1.0",
-    "karma-coverage-istanbul-reporter": "^2.1.0",
+    "karma-coverage-istanbul-reporter": "^2.1.1",
     "karma-firefox-launcher": "^1.2.0",
     "karma-jasmine": "2.0.1",
     "karma-jasmine-html-reporter": "^1.4.2",
@@ -69,9 +69,9 @@
     "npm-check": "^5.9.0",
     "prettier": "1.19.1",
     "protractor": "^6.0.0",
-    "source-map-explorer": "^2.1.0",
-    "stylelint": "^11.1.1",
-    "ts-node": "^8.4.1",
+    "source-map-explorer": "^2.1.2",
+    "stylelint": "^12.0.0",
+    "ts-node": "^8.5.4",
     "tslint": "^5.20.1",
     "tslint-config-prettier": "1.18.0",
     "typescript": "~3.6.4"
