--- a/package.json
+++ b/package.json
@@ -68,11 +68,13 @@
     "npm-check": "^5.9.0",
     "prettier": "1.19.1",
     "protractor": "^6.0.0",
+    "rxjs-tslint-rules": "^4.28.0",
     "source-map-explorer": "^2.1.2",
     "stylelint": "^12.0.0",
     "ts-node": "^8.5.4",
     "tslint": "^5.20.1",
     "tslint-config-prettier": "1.18.0",
+    "tsutils": "^3.17.1",
     "typescript": "~3.6.4"
   },
   "husky": {
