--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "angular-hispano",
-  "version": "0.3.1",
+  "version": "0.3.2",
   "scripts": {
     "e2e": "ng e2e",
     "ng": "ng",
@@ -23,60 +23,60 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~9.0.2",
-    "@angular/cdk": "~9.0.1",
-    "@angular/common": "~9.0.2",
-    "@angular/compiler": "~9.0.2",
-    "@angular/core": "~9.0.2",
-    "@angular/fire": "~5.4.2",
-    "@angular/forms": "~9.0.2",
-    "@angular/material": "~9.0.1",
-    "@angular/platform-browser": "~9.0.2",
-    "@angular/platform-browser-dynamic": "~9.0.2",
-    "@angular/router": "~9.0.2",
-    "@angular/service-worker": "~9.0.2",
-    "angulartics2": "^8.3.0",
-    "firebase": "^7.9.0",
-    "rxjs": "~6.5.4",
-    "tslib": "^1.11.0",
-    "zone.js": "~0.10.2"
+    "@angular/animations": "~9.1.2",
+    "@angular/cdk": "~9.2.1",
+    "@angular/common": "~9.1.2",
+    "@angular/compiler": "~9.1.2",
+    "@angular/core": "~9.1.2",
+    "@angular/fire": "~6.0.0",
+    "@angular/forms": "~9.1.2",
+    "@angular/material": "~9.2.1",
+    "@angular/platform-browser": "~9.1.2",
+    "@angular/platform-browser-dynamic": "~9.1.2",
+    "@angular/router": "~9.1.2",
+    "@angular/service-worker": "~9.1.2",
+    "angulartics2": "^9.0.0",
+    "firebase": "^7.14.1",
+    "rxjs": "~6.5.5",
+    "tslib": "^1.11.1",
+    "zone.js": "~0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/architect": "~0.900.3",
-    "@angular-devkit/build-angular": "~0.900.3",
-    "@angular-devkit/core": "~9.0.3",
-    "@angular-devkit/schematics": "~9.0.3",
-    "@angular/cli": "~9.0.3",
-    "@angular/compiler-cli": "~9.0.2",
-    "@angular/language-service": "~9.0.2",
+    "@angular-devkit/architect": "~0.901.1",
+    "@angular-devkit/build-angular": "~0.901.1",
+    "@angular-devkit/core": "~9.1.1",
+    "@angular-devkit/schematics": "~9.1.1",
+    "@angular/cli": "~9.1.1",
+    "@angular/compiler-cli": "~9.1.2",
+    "@angular/language-service": "~9.1.2",
     "@schuchard/prettier": "^3.1.0",
-    "@types/jasmine": "^3.5.6",
+    "@types/jasmine": "^3.5.10",
     "@types/jasminewd2": "^2.0.8",
-    "@types/node": "^12.12.28",
-    "codelyzer": "^5.2.1",
-    "firebase-tools": "^7.13.1",
-    "husky": "^4.2.3",
+    "@types/node": "^12.12.36",
+    "codelyzer": "^5.2.2",
+    "firebase-tools": "^8.1.1",
+    "husky": "^4.2.5",
     "jasmine-core": "^3.5.0",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^4.4.1",
+    "jasmine-spec-reporter": "^5.0.1",
+    "karma": "^5.0.2",
     "karma-chrome-launcher": "^3.1.0",
     "karma-coverage-istanbul-reporter": "^2.1.1",
     "karma-firefox-launcher": "^1.3.0",
     "karma-jasmine": "^3.1.1",
-    "karma-jasmine-html-reporter": "^1.5.2",
-    "lint-staged": "^10.0.7",
+    "karma-jasmine-html-reporter": "^1.5.3",
+    "lint-staged": "^10.1.7",
     "minimatch": "^3.0.4",
-    "npm-check": "^5.9.0",
-    "prettier": "1.19.1",
+    "npm-check": "^5.9.2",
+    "prettier": "^2.0.4",
     "protractor": "^6.0.0",
-    "rxjs-tslint-rules": "^4.29.0",
-    "source-map-explorer": "^2.3.1",
-    "stylelint": "^13.2.0",
-    "ts-node": "^8.6.2",
-    "tslint": "^6.0.0",
+    "rxjs-tslint-rules": "^4.30.1",
+    "source-map-explorer": "^2.4.2",
+    "stylelint": "^13.3.3",
+    "ts-node": "^8.9.0",
+    "tslint": "^6.1.1",
     "tslint-config-prettier": "1.18.0",
     "tsutils": "^3.17.1",
-    "typescript": "^3.7.5"
+    "typescript": "^3.8.3"
   },
   "husky": {
     "hooks": {
