--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@angular/common": "~9.1.4",
     "@angular/compiler": "~9.1.4",
     "@angular/core": "~9.1.4",
+    "@angular/flex-layout": "^9.0.0-beta.29",
     "@angular/fire": "~6.0.0",
     "@angular/forms": "~9.1.4",
     "@angular/material": "~9.2.2",
@@ -37,9 +38,10 @@
     "@angular/platform-browser-dynamic": "~9.1.4",
     "@angular/router": "~9.1.4",
     "@angular/service-worker": "~9.1.4",
+    "@angular-material-extensions/password-strength": "^6.0.0",
     "angulartics2": "^9.0.0",
     "firebase": "^7.14.2",
-    "ngx-auth-firebaseui": "^2.6.0",
+    "ngx-auth-firebaseui": "^4.2.1",
     "rxjs": "~6.5.5",
     "tslib": "^1.11.1",
     "zone.js": "~0.10.3"
