--- a/angular.json
+++ b/angular.json
@@ -129,7 +129,15 @@
             "scripts": [],
             "assets": [
               "projects/web/src/favicon.ico",
+              "projects/web/src/apple-touch-icon.png",
               "projects/web/src/assets",
+              "projects/web/src/robots.txt",
+              "projects/web/src/sitemap.xml",
+              {
+                "glob": "**/*",
+                "input": "node_modules/ngx-auth-firebaseui/assets/",
+                "output": "./assets/"
+              },
               "projects/web/src/manifest.webmanifest"
             ]
           }
