--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "angular-hispano",
   "version": "0.3.2",
   "scripts": {
-    "e2e": "ng e2e",
     "ng": "ng",
     "start": "ng serve",
     "start:mobile-testing": "ng serve --host 0.0.0.0 --disable-host-check",
@@ -25,59 +24,59 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~9.1.4",
-    "@angular/cdk": "~9.2.2",
-    "@angular/common": "~9.1.4",
-    "@angular/compiler": "~9.1.4",
-    "@angular/core": "~9.1.4",
-    "@angular/flex-layout": "^9.0.0-beta.29",
-    "@angular/fire": "~6.0.0",
-    "@angular/forms": "~9.1.4",
-    "@angular/material": "~9.2.2",
-    "@angular/platform-browser": "~9.1.4",
-    "@angular/platform-browser-dynamic": "~9.1.4",
-    "@angular/router": "~9.1.4",
-    "@angular/service-worker": "~9.1.4",
     "@angular-material-extensions/password-strength": "^6.0.0",
-    "angulartics2": "^9.0.0",
-    "firebase": "^7.14.2",
-    "ngx-auth-firebaseui": "^4.2.1",
+    "@angular/animations": "~9.1.11",
+    "@angular/cdk": "~9.2.4",
+    "@angular/common": "~9.1.11",
+    "@angular/compiler": "~9.1.11",
+    "@angular/core": "~9.1.11",
+    "@angular/fire": "~6.0.0",
+    "@angular/flex-layout": "^9.0.0-beta.31",
+    "@angular/forms": "~9.1.11",
+    "@angular/material": "~9.2.4",
+    "@angular/platform-browser": "~9.1.11",
+    "@angular/platform-browser-dynamic": "~9.1.11",
+    "@angular/router": "~9.1.11",
+    "@angular/service-worker": "~9.1.11",
+    "angulartics2": "^9.1.0",
+    "firebase": "^7.15.1",
+    "ngx-auth-firebaseui": "^4.4.0",
     "rxjs": "~6.5.5",
     "tslib": "^1.11.1",
     "zone.js": "~0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/architect": "~0.901.4",
-    "@angular-devkit/build-angular": "~0.901.4",
-    "@angular-devkit/core": "~9.1.4",
-    "@angular-devkit/schematics": "~9.1.4",
-    "@angular/cli": "~9.1.4",
-    "@angular/compiler-cli": "~9.1.4",
-    "@angular/language-service": "~9.1.4",
+    "@angular-devkit/architect": "^0.901.8",
+    "@angular-devkit/build-angular": "~0.901.8",
+    "@angular-devkit/core": "~9.1.8",
+    "@angular-devkit/schematics": "~9.1.8",
+    "@angular/cli": "~9.1.8",
+    "@angular/compiler-cli": "~9.1.11",
+    "@angular/language-service": "~9.1.11",
     "@schuchard/prettier": "^3.1.0",
     "@types/jasmine": "^3.5.10",
     "@types/jasminewd2": "^2.0.8",
-    "@types/node": "^13.13.4",
+    "@types/node": "^14.0.13",
     "codelyzer": "^5.2.2",
-    "firebase-tools": "^8.2.0",
+    "firebase-tools": "^8.4.2",
     "husky": "^4.2.5",
     "jasmine-core": "^3.5.0",
     "jasmine-spec-reporter": "^5.0.2",
-    "karma": "^5.0.4",
+    "karma": "^5.1.0",
     "karma-chrome-launcher": "^3.1.0",
-    "karma-coverage-istanbul-reporter": "^3.0.0",
+    "karma-coverage-istanbul-reporter": "^3.0.3",
     "karma-firefox-launcher": "^1.3.0",
-    "karma-jasmine": "^3.1.1",
-    "karma-jasmine-html-reporter": "^1.5.3",
-    "lint-staged": "^10.2.2",
+    "karma-jasmine": "^3.3.1",
+    "karma-jasmine-html-reporter": "^1.5.4",
+    "lint-staged": "^10.2.10",
     "minimatch": "^3.0.4",
     "npm-check": "^5.9.2",
     "prettier": "^2.0.5",
-    "protractor": "^6.0.0",
-    "rxjs-tslint-rules": "^4.31.0",
+    "protractor": "^7.0.0",
+    "rxjs-tslint-rules": "^4.33.1",
     "source-map-explorer": "^2.4.2",
-    "stylelint": "^13.3.3",
-    "ts-node": "^8.10.1",
+    "stylelint": "^13.6.0",
+    "ts-node": "^8.10.2",
     "tslint": "^6.1.2",
     "tslint-config-prettier": "1.18.0",
     "tsutils": "^3.17.1",
