--- a/package.json
+++ b/package.json
@@ -25,19 +25,19 @@
   "private": true,
   "dependencies": {
     "@angular-material-extensions/password-strength": "^6.0.0",
-    "@angular/animations": "~10.0.9",
+    "@angular/animations": "~10.1.0-next.5",
     "@angular/cdk": "~10.1.3",
-    "@angular/common": "~10.0.9",
-    "@angular/compiler": "~10.0.9",
-    "@angular/core": "~10.0.9",
+    "@angular/common": "~10.1.0-next.5",
+    "@angular/compiler": "~10.1.0-next.5",
+    "@angular/core": "~10.1.0-next.5",
     "@angular/fire": "6.0.0",
     "@angular/flex-layout": "^10.0.0-beta.32",
-    "@angular/forms": "~10.0.9",
+    "@angular/forms": "~10.1.0-next.5",
     "@angular/material": "~10.1.3",
-    "@angular/platform-browser": "~10.0.9",
-    "@angular/platform-browser-dynamic": "~10.0.9",
-    "@angular/router": "~10.0.9",
-    "@angular/service-worker": "~10.0.9",
+    "@angular/platform-browser": "~10.1.0-next.5",
+    "@angular/platform-browser-dynamic": "~10.1.0-next.5",
+    "@angular/router": "~10.1.0-next.5",
+    "@angular/service-worker": "~10.1.0-next.5",
     "firebase": "^7.18.0",
     "ngx-auth-firebaseui": "^4.4.0",
     "rxjs": "~6.6.2",
@@ -45,13 +45,13 @@
     "zone.js": "~0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/architect": "^0.1000.6",
-    "@angular-devkit/build-angular": "~0.1000.6",
-    "@angular-devkit/core": "~10.0.6",
-    "@angular-devkit/schematics": "~10.0.6",
-    "@angular/cli": "~10.0.6",
-    "@angular/compiler-cli": "~10.0.9",
-    "@angular/language-service": "~10.0.9",
+    "@angular-devkit/architect": "^0.1001.0-next.5",
+    "@angular-devkit/build-angular": "~0.1001.0-next.5",
+    "@angular-devkit/core": "~10.1.0-next.5",
+    "@angular-devkit/schematics": "~10.1.0-next.5",
+    "@angular/cli": "~10.1.0-next.5",
+    "@angular/compiler-cli": "~10.1.0-next.5",
+    "@angular/language-service": "~10.1.0-next.5",
     "@schuchard/prettier": "^3.1.0",
     "@types/jasmine": "^3.5.12",
     "@types/jasminewd2": "^2.0.8",
