--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
   To learn more about this file see: https://angular.io/config/solution-tsconfig.
 */
 {
+  "extends": "./tsconfig.json",
   "files": [],
   "references": [
     {
