--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "angular-hispano",
-  "version": "0.3.2",
+  "version": "0.4.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -39,7 +39,9 @@
     "@angular/router": "~10.1.0-next.5",
     "@angular/service-worker": "~10.1.0-next.5",
     "firebase": "^7.18.0",
+    "first-input-delay": "^0.1.3",
     "ngx-auth-firebaseui": "^4.4.0",
+    "proxy-polyfill": "^0.3.2",
     "rxjs": "~6.6.2",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
