--- a/package.json
+++ b/package.json
@@ -24,60 +24,60 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-material-extensions/password-strength": "^6.0.0",
-    "@angular/animations": "~10.1.0-next.7",
-    "@angular/cdk": "~10.1.3",
-    "@angular/common": "~10.1.0-next.7",
-    "@angular/compiler": "~10.1.0-next.7",
-    "@angular/core": "~10.1.0-next.7",
-    "@angular/fire": "6.0.0",
+    "@angular-material-extensions/password-strength": "^7.0.0",
+    "@angular/animations": "~10.1.3",
+    "@angular/cdk": "~10.2.3",
+    "@angular/common": "~10.1.3",
+    "@angular/compiler": "~10.1.3",
+    "@angular/core": "~10.1.3",
+    "@angular/fire": "~6.0.3",
     "@angular/flex-layout": "^10.0.0-beta.32",
-    "@angular/forms": "~10.1.0-next.7",
-    "@angular/material": "~10.1.3",
-    "@angular/platform-browser": "~10.1.0-next.7",
-    "@angular/platform-browser-dynamic": "~10.1.0-next.7",
-    "@angular/router": "~10.1.0-next.7",
-    "@angular/service-worker": "~10.1.0-next.7",
-    "firebase": "^7.19.0",
+    "@angular/forms": "~10.1.3",
+    "@angular/material": "~10.2.3",
+    "@angular/platform-browser": "~10.1.3",
+    "@angular/platform-browser-dynamic": "~10.1.3",
+    "@angular/router": "~10.1.3",
+    "@angular/service-worker": "~10.1.3",
+    "firebase": "^7.21.1",
     "first-input-delay": "^0.1.3",
     "ngx-auth-firebaseui": "^4.4.0",
     "proxy-polyfill": "^0.3.2",
-    "rxjs": "~6.6.2",
-    "tslib": "^2.0.0",
+    "rxjs": "~6.6.3",
+    "tslib": "^2.0.1",
     "zone.js": "~0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/architect": "^0.1001.0-next.6",
-    "@angular-devkit/build-angular": "~0.1001.0-next.6",
-    "@angular-devkit/core": "~10.1.0-next.6",
-    "@angular-devkit/schematics": "~10.1.0-next.6",
-    "@angular/cli": "~10.1.0-next.6",
-    "@angular/compiler-cli": "~10.1.0-next.7",
-    "@angular/language-service": "~10.1.0-next.7",
+    "@angular-devkit/architect": "^0.1001.3",
+    "@angular-devkit/build-angular": "~0.1001.3",
+    "@angular-devkit/core": "~10.1.3",
+    "@angular-devkit/schematics": "~10.1.3",
+    "@angular/cli": "~10.1.3",
+    "@angular/compiler-cli": "~10.1.3",
+    "@angular/language-service": "~10.1.3",
     "@schuchard/prettier": "^3.1.0",
-    "@types/jasmine": "^3.5.13",
+    "@types/jasmine": "^3.5.14",
     "@types/jasminewd2": "^2.0.8",
-    "@types/node": "^14.6.0",
+    "@types/node": "^14.11.2",
     "codelyzer": "^6.0.0",
-    "firebase-tools": "^8.9.0",
-    "husky": "^4.2.5",
+    "firebase-tools": "^8.11.2",
+    "husky": "^4.3.0",
     "jasmine-core": "^3.6.0",
-    "jasmine-spec-reporter": "~5.0.0",
-    "karma": "^5.1.1",
+    "jasmine-spec-reporter": "^6.0.0",
+    "karma": "^5.2.3",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-firefox-launcher": "^1.3.0",
     "karma-jasmine": "^4.0.1",
     "karma-jasmine-html-reporter": "^1.5.0",
-    "lint-staged": "^10.2.11",
+    "lint-staged": "^10.4.0",
     "minimatch": "^3.0.4",
     "npm-check": "^5.9.2",
-    "prettier": "^2.0.5",
+    "prettier": "^2.1.2",
     "protractor": "~7.0.0",
-    "rxjs-tslint-rules": "^4.34.0",
+    "rxjs-tslint-rules": "^4.34.3",
     "source-map-explorer": "^2.5.0",
-    "stylelint": "^13.6.1",
-    "ts-node": "^8.10.2",
+    "stylelint": "^13.7.2",
+    "ts-node": "^9.0.0",
     "tslint": "^6.1.3",
     "tslint-config-prettier": "1.18.0",
     "tsutils": "^3.17.1",
