--- a/angular.json
+++ b/angular.json
@@ -160,5 +160,13 @@
   "cli": {
     "analytics": "dc47fe7b-beed-4782-ae42-d417a7f0c053",
     "schematicCollections": ["@angular-eslint/schematics"]
+  },
+  "schematics": {
+    "@angular-eslint/schematics:application": {
+      "setParserOptionsProject": true
+    },
+    "@angular-eslint/schematics:library": {
+      "setParserOptionsProject": true
+    }
   }
 }
